fix mistaken flex alignment for wrapper div

--- a/app/assets/stylesheets/_main.scss
+++ b/app/assets/stylesheets/_main.scss
@@ -31,7 +31,6 @@ body {
 
 .wrapper {
   flex: 1 0 auto;
-  align-self: center;
 }
 
 .footer {
